# dearpygui_sound_example

./: LICENSE  README.md  pyproject.toml
dearpygui_sound_example/: __main__.py  mic.py
