[tool.poetry]
name = "dearpygui_sound_example"
version = "0.1.0"
description = ""
authors = ["T-Sumida <ui.suto05@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dearpygui = "^1.6.2"
sounddevice = "^0.4.4"
numpy = "^1.22.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
